# qrename

./: PKGBUILD  README.md  __init__.py  pyproject.toml  qrename.py  renamers.py  resources.py
resources/: qrename_pl.qm  qrename_pl.ts  resources.qrc
src/qrename/: __init__.py  __main__.py  mainwindow.py  renamers.py  resources.py
